# eoclu

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  release.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/actions/configure-gpg-and-git/: action.yml
.github/actions/determine-release-level/: action.yml
.github/actions/extract-release-notes/: action.yml
.github/workflows/: continuous-integration.yml  label-pull-request.yml  release.yml
src/: cli.rs  lib.rs  main.rs
tests/: help.rs  version.rs
tests/snapshots/: help__should_display_concise_help_when_passed_short_flag.snap  help__unix__should_display_concise_help_when_passed_short_flag.snap  help__unix__should_display_full_help_when_passed_long_flag.snap  help__windows__should_display_concise_help_when_passed_short_flag.snap  help__windows__should_display_full_help_when_passed_long_flag.snap  version__should_display_version_when_passed_long_flag.snap  version__should_display_version_when_passed_short_flag.snap  version__should_display_version_with_short_flag.snap
tests/util/: mod.rs
